hack/config/policy/controlplane/tests/kube-apiserver-scale-awake/scale_expected.yaml
kind: Scale
apiVersion: autoscaling/v1
metadata:
  name: kube-apiserver
  namespace: shoot--timebertt--sharding
spec:
  replicas: 4
