hack/config/policy/controlplane/tests/kube-apiserver-scale-awake/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kube-apiserver-scale-awake
policies:
- ../../kube-apiserver-scale.yaml
resources:
# spec.replicas=2 -> expect spec.replicas=4
- scale.yaml
variables: variables.yaml
results:
- policy: shoot--timebertt--sharding/kube-apiserver-scale
  rule: replicas-scale
  resources:
  - shoot--timebertt--sharding/kube-apiserver
  kind: Scale
  result: pass
  patchedResource: scale_expected.yaml
