hack/config/policy/controlplane/tests/kube-apiserver-scale-awake/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
subresources:
- subresource:
    name: "deployments/scale"
    kind: "Scale"
    group: "autoscaling"
    version: "v1"
  parentResource:
    name: "deployments"
    kind: "Deployment"
    group: "apps"
    version: "v1"
